Fix dark mode for find dialog

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -296,7 +296,9 @@ pre {
 	}
 
 	.CodeMirror-dialog {
-		background-color: var(--white);
+		background-color: var(--page-bg);
+		border-color: var(--page-bg2);
+		font-size: 1.2em;
 	}
 
 	.cm-tab {
